[package]
name = "simplecss"
version = "0.2.1"
authors = ["Reizner Evgeniy <razrfalcon@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "A simple CSS 2 parser and selector."
repository = "https://github.com/RazrFalcon/simplecss"
keywords = ["css", "parser", "selector"]
categories = ["parser-implementations"]
edition = "2018"
exclude = ["testing-tools/**"]

[dependencies]
log = "0.4.8"

[dev-dependencies]
env_logger = { version = "0.6", default-features = false }
roxmltree = "0.7"
